<resources>
    <string name="app_name">Serenity</string>
    <string name="iv_cd_splash">Splash Screen Logo</string>
    <string name="tv_txt_setup_acb_title">Accessbility</string>
    <string name="tv_txt_setup_acb_description">This app needs Accessibility Service access to detect and close certain apps when necessary. This permission will only be used to ensure the app functions as intended. Please enable this service by tapping the button below.</string>
    <string name="btn_setup_acb_enable">Enable Accessbility</string>
    <string name="tv_txt_setup_ua_title">Usage Access</string>
    <string name="tv_txt_setup_ua_description">This app needs Usage Access Service to help track how long you use social media. This permission will only be used to ensure the app functions as intended. Please enable this service by tapping the button below.</string>
    <string name="btn_txt_setup_ua_enable">Enable Usage Access</string>
    <string name="tv_txt_setup_sp_title">Show Popup</string>
    <string name="tv_txt_setup_sp_description">This app needs Display Over Other Apps Service to show information popup when closing certain apps. This permission will only be used to ensure the app functions as intended. Please enable this service by tapping the button below.</string>
    <string name="btn_txt_setup_sp_enable">Enable Display Over Other App</string>

    <string name="accessibility_service_description">❓Why do we use this permission?\nWe use Accessibility Service to detect and close certain apps when necessary. To help you control you social media usage every day\n\n❓Do we collect your private data?\nWe do not collect your private data through this permission.\n\nSerenity Developer Team</string>

    <string-array name="gender_entries">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="gender_values">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="questioner_social_media_entries">
        <item>TikTok</item>
        <item>X (Twitter)</item>
        <item>Instagram</item>
        <item>Facebook</item>
        <item>YouTube</item>
        <item>Reddit</item>
        <item>Threads</item>
    </string-array>

    <string-array name="questioner_use_time_entries">
        <item>Less than an Hour</item>
        <item>Between 1 and 2 hours</item>
        <item>Between 2 and 3 hours</item>
        <item>Between 3 and 4 hours</item>
        <item>Between 4 and 5 hours</item>
        <item>More than 5 hours</item>
    </string-array>

    <string-array name="questioner_use_time_values">
        <item>&lt;1</item>
        <item>1-2</item>
        <item>2-3</item>
        <item>3-4</item>
        <item>4-5</item>
        <item>&gt;5</item>
    </string-array>

    <string-array name="questioner_likert_scale_entries">
        <item>Very Easy</item>
        <item>Easy</item>
        <item>Neutral</item>
        <item>Difficult</item>
        <item>Very Difficult</item>
    </string-array>

    <string-array name="questioner_likert_scale_2nd_entries">
        <item>Not at all</item>
        <item>Slightly</item>
        <item>Moderately</item>
        <item>Quite a bit</item>
        <item>Extremely</item>
    </string-array>

    <string-array name="questioner_likert_scale_3rd_entries">
        <item>Not at all</item>
        <item>Slightly</item>
        <item>Moderately</item>
        <item>Quite a bit</item>
        <item>Extremely</item>
    </string-array>

    <string-array name="questioner_likert_scale_4th_entries">
        <item>Never</item>
        <item>Rarely</item>
        <item>Sometimes</item>
        <item>Often</item>
        <item>Always</item>
    </string-array>

    <string-array name="questioner_likert_scale_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="filter_activity">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
    </string-array>
</resources>